--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-hello
+<!DOCTYPE html>
+<head>
+
+<title>VIGVAM</title>
+
+<meta charset="utf-8">
+
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+<body>
+
+<header class="upper_block"></header>
+
+<video autoplay loop poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
+<source src="img/nature.mp4" type="video/mp4">
+</video>
+
+    <div id="wrapper">
+            <div class="container">
+
+            </div>
+    </div>
+
+<footer class="bottom_block"></footer>
+</body>
+</html>
