--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html ng-app="Vigvam">
 <head>
 
 <title>VIGVAM</title>
@@ -6,8 +7,17 @@
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.css">
+
 <script src="js/jquery-1.12.2.min.js"></script>
-<script src="js/animation.js"></script>
+<script src="css/bootstrap/js/bootstrap.min.js"></script>
+<script src="js/angular.min.js"></script>
+<script src="js/angular-route.min.js"></script>
+<script src="js/animation.js"></script> <!-- intro animation -->
+<script src="js/angular-script.js"></script>
+
+
+
 
 </head>
 <body>
@@ -15,25 +25,23 @@
 <header class="upper_block"></header>
 
 <video autoplay poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" onended="videoEnded()" onclick="videoEnded()">
-<source src="img/nature.mp4" type="video/mp4">
+<source src="img/vigvam.mp4" type="video/mp4">
 </video>
 
- <iframe 
-   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.0722724513803!2d153.44808100000003!3d-28.386885000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b90f10f81718185%3A0x976890f2ee368ce8!2sFIGJAM+IT+Pty+Ltd!5e0!3m2!1sen!2sau!4v1435707782546" 
-   class="bg-map" 
-   width="2300" 
-   height="800"
-   frameborder="0" 
-   style="border:0" 
-   allowfullscreen>
- </iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26778057.28554642!2d44.229885566127344!3d46.45410414577874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d3423e37227b9d%3A0x84e311f8582cc6e8!2z0JHRltC70LAg0KbQtdGA0LrQstCwLCDQmtC40ZfQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1463642349964" width="2300" height="1000" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <div id="wrapper">
             <div class="container">
-
+                  <ng-view></ng-view>
             </div>
     </div>
-
+    <div class="navigation">
+          <div class="row text-center">
+            <div class="col-md-2 col-md-offset-3"><a href="#/quests">Квесты</a></div>
+            <div class="col-md-2"><a href="#/news">Новости</a></div>
+            <div class="col-md-2"><a href="#/about">О проекте</a></div>
+          </div>
+    </div>
 <footer class="bottom_block"></footer>
 </body>
 </html>
